# MAXINE-AFX-SDK

./: CHANGELOG  CMakeLists.txt  LICENSE  Readme.MD
nvafx/include/: nvAudioEffects.h
nvafx/lib/: NVAudioEffects.lib
samples/: CMakeLists.txt
samples/denoise_wav/: CMakeLists.txt  COPYRIGHT_WAV.txt  denoise16k_cfg.txt  denoise48k_cfg.txt  denoise_wav.cpp  run_16k.bat  run_48k.bat
samples/effects_demo/: CMakeLists.txt  COPYRIGHT_WAV.txt  aec16k_cfg.txt  aec48k_cfg.txt  denoise16k_cfg.txt  denoise16k_cfg_ampere.txt  denoise16k_cfg_turing.txt  denoise48k_cfg.txt  denoise48k_cfg_ampere.txt  denoise48k_cfg_turing.txt  denoiser16k_cfg.txt  denoiser16k_superres16kto48k_chain_cfg.txt  denoiser48k_cfg.txt  dereverb16k_cfg.txt  dereverb16k_cfg_ampere.txt  dereverb16k_cfg_turing.txt  dereverb16k_superres16kto48k_chain_cfg.txt  dereverb48k_cfg.txt  dereverb48k_cfg_ampere.txt  dereverb48k_cfg_turing.txt  dereverb_denoise16k_cfg.txt  dereverb_denoise16k_cfg_ampere.txt  dereverb_denoise16k_cfg_turing.txt  dereverb_denoise48k_cfg.txt  dereverb_denoise48k_cfg_ampere.txt  dereverb_denoise48k_cfg_turing.txt  dereverb_denoiser16k_cfg.txt  dereverb_denoiser16k_superres16kto48k_chain_cfg.txt  dereverb_denoiser48k_cfg.txt  effects_demo.cpp  readme.MD  readme.txt  run_aec_16k.bat  run_aec_48k.bat  run_denoiser_16k.bat  run_denoiser_16k_ampere.bat  run_denoiser_16k_superres_16kto48k_chain.bat  run_denoiser_16k_turing.bat  run_denoiser_48k.bat  run_denoiser_48k_ampere.bat  (+28 more)
samples/utils/: ConfigReader.hpp  NVAudioEffectsAppUtils.lib  ReadWavFile.hpp
samples/utils/config_reader/: ConfigReader.cpp  ConfigReader.hpp
samples/utils/wave_reader/: wave.hpp  waveReadWrite.cpp  waveReadWrite.hpp
